--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@vuepress/plugin-back-to-top": "^1.7.1",
     "@vuepress/plugin-pwa": "^1.7.1",
-    "vuepress": "^1.9.10",
+    "vuepress": "^1.9.10"
+  },
+  "devDependencies": {
     "vuepress-theme-cool": "^1.3.1"
   }
 }
