--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.1.0",
   "main": "index.js",
   "description": "Databases course work template",
-  "repository": "https://github.com/kol-oss/database-cousework",
-  "author": "Khozhainov Mykola <kolyakhozhajinov@gmail.com>",
+  "repository": "https://github.com/KseniiaHorai/database-coursework",
+  "author": "Horai Kseniia <horaiksenia@gmail.com>",
   "license": "ECL 2.0",
   "scripts": {
     "docs:dev": "npx vuepress dev docs",
